[gd_scene load_steps=13 format=3 uid="uid://l60qdcbqrbqn"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_bsqko"]
[ext_resource type="Texture2D" uid="uid://d3pajqcvdiksj" path="res://icons/Dirt.png" id="2_7ghw0"]
[ext_resource type="Texture2D" uid="uid://c0mqgdtkp7qpm" path="res://icons/WoodPlanks.png" id="3_oym38"]
[ext_resource type="Texture2D" uid="uid://dn25k2v7i1dxr" path="res://icons/Grass.png" id="4_d1rnf"]
[ext_resource type="Texture2D" uid="uid://d2jwq42g8he0w" path="res://icons/Wood.png" id="5_pp7ug"]
[ext_resource type="Texture2D" uid="uid://c61gsd2q785dh" path="res://icons/crosshair2.png" id="6_4w85u"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_1bp00"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_2d4dr"]

[sub_resource type="BoxMesh" id="BoxMesh_qdkvv"]

[sub_resource type="Animation" id="Animation_88fue"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/PlayerArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.31671, -0.676452, -0.73283)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/PlayerArm:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.15708, 0.207694, -0.0139626)]
}

[sub_resource type="Animation" id="Animation_ry4jw"]
resource_name = "arm_move"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/PlayerArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(1.317, -0.676, -0.733), Vector3(1.317, -1.144, -1.19), Vector3(1.317, -0.971, -1.2), Vector3(1.317, -0.676, -0.733)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/PlayerArm:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.15708, 0.00523599, -0.0139626), Vector3(0.15708, 0.0226893, -0.0139626), Vector3(0.15708, 0.00523599, -0.0139626)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8yf6b"]
_data = {
"RESET": SubResource("Animation_88fue"),
"arm_move": SubResource("Animation_ry4jw")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_bsqko")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.99629, 0, 0, 0, 1.99629, 0, 0, 0, 1.99629, 0, 0, 0)
shape = SubResource("CylinderShape3D_1bp00")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
mesh = SubResource("CapsuleMesh_2d4dr")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.999949, -0.0101402, 1.32972e-09, 0.0101402, 0.999949, -1.74839e-07, 4.43243e-10, 1.74843e-07, 1, 0.0202709, 1.47596, 0.0119081)

[node name="PlayerArm" type="MeshInstance3D" parent="Camera3D"]
transform = Transform3D(0.480591, 0.0190925, 0.34619, -0.00677681, 0.41065, -0.265908, -0.102373, 0.0624458, 1.64279, 1.31671, -0.676452, -0.73283)
mesh = SubResource("BoxMesh_qdkvv")
skeleton = NodePath("../..")

[node name="ItemHolder" type="Marker3D" parent="Camera3D/PlayerArm"]
transform = Transform3D(1.96983, -0.0291054, -0.50975, 0.127281, 2.37501, 0.356246, 0.14429, -0.0921578, 0.562843, 0.216446, 0.0904868, -0.867401)

[node name="arm_move" type="AnimationPlayer" parent="Camera3D/PlayerArm"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_8yf6b")
}

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -16)

[node name="Hotbar" type="ItemList" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -179.0
offset_top = -93.0
offset_right = 177.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
item_count = 4
max_columns = 4
item_0/text = "1"
item_0/icon = ExtResource("2_7ghw0")
item_1/text = "2"
item_1/icon = ExtResource("3_oym38")
item_2/text = "3"
item_2/icon = ExtResource("4_d1rnf")
item_3/text = "4"
item_3/icon = ExtResource("5_pp7ug")

[node name="chunks_loaded_label" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -302.0
offset_top = 11.0
offset_right = -72.0
offset_bottom = 53.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Chunks Loaded:"

[node name="player_position_label" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -295.0
offset_top = 86.0
offset_right = -65.0
offset_bottom = 128.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Player Position:"

[node name="queue_length_label" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -286.0
offset_top = 120.0
offset_right = -69.0
offset_bottom = 162.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Queue Length:"

[node name="chunk_position_label" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -298.0
offset_top = 48.0
offset_right = -68.0
offset_bottom = 90.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Chunk Position:"

[node name="fps_label" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -132.0
offset_top = 156.0
offset_right = -73.0
offset_bottom = 198.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "FPS:
"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("6_4w85u")
